Bug 422990 - [KPasswordDialog] "OK" button of the password dialog should be disabled until user types something
Summary: [KPasswordDialog] "OK" button of the password dialog should be disabled until...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kwidgetsaddons
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.105.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2020-06-14 22:09 UTC by Patrick Silva
Modified: 2023-12-13 09:39 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (27.67 KB, image/png)
2020-06-14 22:09 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-06-14 22:09:18 UTC
Created attachment 129366 [details]
screenshot

OBSERVED RESULT
As we can see in the attached screenshot, "OK" button of the window that asks for password to extract zip, 7zip, rar and jar archives is enabled even when the password field is empty. If it is clicked, we get an error message (7zip and rar formats) or nothing happens (zip and jar formats).

EXPECTED RESULT
keep "OK" button disabled until user types something

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.19.0
KDE Frameworks Version: 5.71.0
Qt Version: 5.15.0
Comment 1 Elvis Angelaccio 2020-07-18 18:23:51 UTC
That's KPasswordDialog from kwidgetsaddons.
Comment 2 Christoph Feck 2020-07-19 01:18:43 UTC
This requires that an application never shows the dialog when it accepts an empty password.
Comment 3 Bug Janitor Service 2020-07-29 17:05:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kwidgetsaddons/-/merge_requests/16
Comment 4 infiniteverma 2023-09-24 10:07:34 UTC
I'm interested in working on this issue. 

Was able to reproduce with below steps:

1. Compress file with password. "New Archive" -> 7-zip option with password. 
2. Reopen ark and open newly created arhive.
3. Don't enter anything but just click OK.
4. An error dialog did not pop up.
Comment 5 Bug Janitor Service 2023-09-25 16:54:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/ark/-/merge_requests/201
Comment 6 Carl Schwan 2023-12-13 09:39:26 UTC
Git commit 5bf3b5addbd171ae7e67983ee62e40601351b975 by Carl Schwan, on behalf of Anant Verma.
Committed on 13/12/2023 at 10:38.
Pushed by carlschwan into branch 'master'.

Don't allow user to submit with empty password

M  +20   -0    kerfuffle/queries.cpp

https://invent.kde.org/utilities/ark/-/commit/5bf3b5addbd171ae7e67983ee62e40601351b975