Don't allow user to submit with empty password

BUG: 422990